--- a/products.html
+++ b/products.html
@@ -55,41 +55,49 @@
                 <div class="product-grid">
                     <!-- Flower prices -->
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Price - Daisy.svg" alt="Daisy price card">
                         <h3>Daisy</h3>
                         <p class="product-price">RM2.00 / piece</p>
                         <p class="product-desc">Light, cheerful flowers ideal for playful mini bouquets.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Price - Baby Breath.svg" alt="Baby Breath price card">
                         <h3>Baby Breath</h3>
                         <p class="product-price">RM2.00 / piece</p>
                         <p class="product-desc">Soft filler flowers that give volume and texture.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Price - Sunflower.svg" alt="Sunflower price card">
                         <h3>Sunflower</h3>
                         <p class="product-price">RM8.00 / piece</p>
                         <p class="product-desc">Bright and bold - perfect as a focal flower.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Price - Tulip.svg" alt="Tulip price card">
                         <h3>Tulip</h3>
                         <p class="product-price">RM8.00 / piece</p>
                         <p class="product-desc">Elegant stems for simple and stylish arrangements.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Price - Lily.svg" alt="Lily price card">
                         <h3>Lily</h3>
                         <p class="product-price">RM8.00 / piece</p>
                         <p class="product-desc">Graceful blooms for romantic themes.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Price - Gerbera.svg" alt="Gerbera price card">
                         <h3>Gerbera</h3>
                         <p class="product-price">RM8.00 / piece</p>
                         <p class="product-desc">Fun and colourful, suitable for cheerful bouquets.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Price - Rose.svg" alt="Rose price card">
                         <h3>Rose</h3>
                         <p class="product-price">RM9.00 / piece</p>
                         <p class="product-desc">Classic choice for love, appreciation, and special occasions.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Price - Peony.svg" alt="Peony price card">
                         <h3>Peony</h3>
                         <p class="product-price">RM11.00 / piece</p>
                         <p class="product-desc">Lush and full, ideal for luxury-style arrangements.</p>
@@ -206,51 +214,61 @@
                 </p>
                 <div class="product-grid">
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - MINI DAISY (S) - RM8.svg" alt="Mini Daisy bouquet price card">
                         <h3>Mini Daisy (S)</h3>
                         <p class="product-price">RM8</p>
                         <p class="product-desc">Simple and cute bouquet featuring daisy stems.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - ROSE (S) - RM9.svg" alt="Rose bouquet price card">
                         <h3>Rose (S)</h3>
                         <p class="product-price">RM9</p>
                         <p class="product-desc">Mini rose arrangement for sweet, romantic gestures.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - PEONY - RM35 BOUQUET (M).svg" alt="Peony bouquet price card">
                         <h3>Peony Bouquet (M)</h3>
                         <p class="product-price">RM35</p>
                         <p class="product-desc">Lush peony-focused bouquet with premium feel.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - MARRON BOUQUET (M) RM30.svg" alt="Marron bouquet price card">
                         <h3>Marron Bouquet (M)</h3>
                         <p class="product-price">RM30</p>
                         <p class="product-desc">Standard medium-sized bouquet - multiple styling options available.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - GREEN BOUQUET (M) RM30.svg" alt="Green bouquet price card">
                         <h3>Green Bouquet (M)</h3>
                         <p class="product-price">RM30</p>
                         <p class="product-desc">Standard medium-sized bouquet - multiple styling options available.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - CUSTOM BOUQUET A (L).svg" alt="Custom Bouquet A price card">
                         <h3>Custom Bouquet A (L)</h3>
                         <p class="product-price">RM60 (excluding bear)</p>
                         <p class="product-desc">Large bouquet, personalised colours and arrangement.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - CUSTOM BOUQUET B (L).svg" alt="Custom Bouquet B price card">
                         <h3>Custom Bouquet B (L)</h3>
                         <p class="product-price">RM85 (excluding bear)</p>
                         <p class="product-desc">Premium large arrangement with fuller composition.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - CUSTOM BOUQUET C (L).svg" alt="Custom Bouquet C price card">
                         <h3>Custom Bouquet C (L)</h3>
                         <p class="product-price">RM80 (excluding bear)</p>
                         <p class="product-desc">Elegant large bouquet for special gifts and events.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - BUTTERFLY (XL) -RM95.svg" alt="Butterfly bouquet price card">
                         <h3>Butterfly Bouquet (XL)</h3>
                         <p class="product-price">RM95</p>
                         <p class="product-desc">Statement XL bouquet with butterfly theme and detailed finishing.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Bouquet - CUSTOM - RM50 ALA-CARTE.svg" alt="Ala carte bouquet price card">
                         <h3>Custom Ala Carte</h3>
                         <p class="product-price">From RM50</p>
                         <p class="product-desc">Design your own colour combo, flower mix, and style (big flower or vast).</p>
