--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@
                         balance, textures, and the story behind each order.
                     </p>
                 </div>
-                <div class="about-image animate-on-scroll">
-                    <div class="image-placeholder">
-                        Upload your â€œbehind-the-scenesâ€ or crafting image here
+                <div class="story-image animate-on-scroll">
+                    <div class="story-gallery">
+                        <img src="assets/images/HOMEPAGE2.svg" alt="About" loading="lazy">
                     </div>
                 </div>
             </div>
