--- a/products.html
+++ b/products.html
@@ -286,41 +286,49 @@
                 </p>
                 <div class="product-grid">
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Keychain - COQUETTE - RM2.svg" alt="Coquette keychain price card">
                         <h3>Coquette Keychain</h3>
                         <p class="product-price">RM2.00</p>
                         <p class="product-desc">Soft and sweet detail for any bag or keys.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Keychain - FLOWER 1 LAYER - RM2.svg" alt="Flower 1 Layer keychain price card">
                         <h3>Flower (1 Layer)</h3>
                         <p class="product-price">RM2.00</p>
                         <p class="product-desc">Simple floral keychain for minimal style.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Keychain - FLOWER 2 LAYER - RM3.svg" alt="Flower 2 Layer keychain price card">
                         <h3>Flower (2 Layer)</h3>
                         <p class="product-price">RM3.00</p>
                         <p class="product-desc">Slightly fuller flower design for extra dimension.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Keychain - FLOWER (M) - RM6.svg" alt="Flower (M) keychain price card">
                         <h3>Flower (M)</h3>
                         <p class="product-price">RM6.00</p>
                         <p class="product-desc">Medium-sized floral keychain with more detail.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Keychain - SPIDER RM7.svg" alt="Spider keychain price card">
                         <h3>Spider</h3>
                         <p class="product-price">RM7.00</p>
                         <p class="product-desc">Cute spider character keychain with playful vibes.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Keychain - TURTLE RM7.svg" alt="Turtle keychain price card">
                         <h3>Turtle</h3>
                         <p class="product-price">RM7.00</p>
                         <p class="product-desc">Soft chenille turtle friend to bring along.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Keychain - OCTOPUS RM4.svg" alt="Octopus keychain price card">
                         <h3>Octopus</h3>
                         <p class="product-price">RM4.00</p>
                         <p class="product-desc">Adorable mini octopus with tiny tentacles.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
+                        <img class="product-thumb" src="assets/images/Keychain - CUSTOM CHARACTER.svg" alt="Custom character keychain price card">
                         <h3>Custom Character</h3>
                         <p class="product-price">RM7.00 - RM10.00</p>
                         <p class="product-desc">Fan-favourite characters. Request your own character design (subject to feasibility).</p>
@@ -337,8 +345,8 @@
                     A thoughtful way to say "thank you", "congratulations", or "I'm thinking of you".
                 </p>
                 <div class="single-product-layout animate-on-scroll">
-                    <div class="single-product-image image-placeholder">
-                        Upload your flower card image here
+                    <div class="special-image">
+                        <img class="special-visual" src="assets/images/FLOWER CARD 1 PCS RM8.svg" alt="Flower card price and preview">
                     </div>
                     <div class="single-product-text">
                         <h3>Flower Card - 1 Piece</h3>
@@ -380,15 +388,15 @@
                         </p>
                         <a href="https://wa.me/60139083945/?text=Order Custom Cake" class="btn text-btn">Discuss a Custom Cake →</a>
                     </div>
-                    <div class="special-image image-placeholder">
-                        Upload cake box edition image here
+                    <div class="special-image">
+                        <img class="special-visual" src="assets/images/Special - CAKE BOX EDITION.svg" alt="Cake box edition special">
                     </div>
                 </div>
 
                 <!-- Mini Flower Pot -->
                 <div id="mini-flower-pot" class="special-block reverse animate-on-scroll">
-                    <div class="special-image image-placeholder">
-                        Upload mini flower pot image here
+                    <div class="special-image">
+                        <img class="special-visual" src="assets/images/Special - MINI FLOWER POT.svg" alt="Mini flower pot special">
                     </div>
                     <div class="special-text">
                         <h3>Mini Flower Pot</h3>
@@ -417,8 +425,8 @@
                         </ul>
                         <a href="https://wa.me/60139083945/?text=Order Cekak Merdeka" class="btn text-btn">Enquire About Headbands →</a>
                     </div>
-                    <div class="special-image image-placeholder">
-                        Upload headband image here
+                    <div class="special-image">
+                        <img class="special-visual" src="assets/images/Special - HEADBAND MERDEKA EDITION.svg" alt="Headband Merdeka edition special">
                     </div>
                 </div>
             </div>
