--- a/index.html
+++ b/index.html
@@ -130,46 +130,46 @@
     <section class="feature-rail">
         <div class="rail-heading">Available Colors</div>
         <div class="rail-track">
-            <div class="rail-card"><span class="swatch" style="--swatch:#f8c9d3;"></span>Light Pink</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#e64980;"></span>Dark Pink</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#ff0080;"></span>Magenta</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#ff4b4b;"></span>Red</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#800020;"></span>Marron</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#d6c1ff;"></span>Light Purple</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#8b3ffd;"></span>Purple</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#53b5d8;"></span>Ocean Blue</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#c4e6ff;"></span>Light Blue</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#2f57d4;"></span>Royal Blue</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#ff9a00;"></span>Orange</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#f2c200;"></span>Dark Yellow</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#edc8a2;"></span>Skin</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#7a3f1a;"></span>Dark Brown</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#000000;"></span>Black</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#b5e8b7;"></span>Pastel Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#d9f5d8;"></span>Tint Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#7fbf72;"></span>Light Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#0f7b1c;"></span>Dark Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#ffffff;"></span>White</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#f8c9d3;"></span>Light Pink</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#e64980;"></span>Dark Pink</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#ff0080;"></span>Magenta</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#ff4b4b;"></span>Red</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#800020;"></span>Marron</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#d6c1ff;"></span>Light Purple</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#8b3ffd;"></span>Purple</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#53b5d8;"></span>Ocean Blue</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#c4e6ff;"></span>Light Blue</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#2f57d4;"></span>Royal Blue</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#ff9a00;"></span>Orange</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#f2c200;"></span>Dark Yellow</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#edc8a2;"></span>Skin</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#7a3f1a;"></span>Dark Brown</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#000000;"></span>Black</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#b5e8b7;"></span>Pastel Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#d9f5d8;"></span>Tint Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#7fbf72;"></span>Light Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#0f7b1c;"></span>Dark Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#ffffff;"></span>White</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - LIGHT PINK.svg" alt="Light Pink swatch">Light Pink</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - DARK PINK.svg" alt="Dark Pink swatch">Dark Pink</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - MAGENTA.svg" alt="Magenta swatch">Magenta</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - RED.svg" alt="Red swatch">Red</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - MARRON.svg" alt="Marron swatch">Marron</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - LIGHT PURPLE.svg" alt="Light Purple swatch">Light Purple</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - PURPLE.svg" alt="Purple swatch">Purple</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - OCEAN BLUE.svg" alt="Ocean Blue swatch">Ocean Blue</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - LIGHT BLUE.svg" alt="Light Blue swatch">Light Blue</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - ROYAL BLUE.svg" alt="Royal Blue swatch">Royal Blue</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - ORANGE.svg" alt="Orange swatch">Orange</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - DARK YELLOW.svg" alt="Dark Yellow swatch">Dark Yellow</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - SKIN.svg" alt="Skin swatch">Skin</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - DARK BROWN.svg" alt="Dark Brown swatch">Dark Brown</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - BLACK.svg" alt="Black swatch">Black</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - PASTEL GREEN.svg" alt="Pastel Green swatch">Pastel Green</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - TINT GREEN.svg" alt="Tint Green swatch">Tint Green</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - LIGHT GREEN.svg" alt="Light Green swatch">Light Green</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - DARK GREEN.svg" alt="Dark Green swatch">Dark Green</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - WHITE.svg" alt="White swatch">White</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - LIGHT PINK.svg" alt="Light Pink swatch">Light Pink</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - DARK PINK.svg" alt="Dark Pink swatch">Dark Pink</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - MAGENTA.svg" alt="Magenta swatch">Magenta</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - RED.svg" alt="Red swatch">Red</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - MARRON.svg" alt="Marron swatch">Marron</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - LIGHT PURPLE.svg" alt="Light Purple swatch">Light Purple</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - PURPLE.svg" alt="Purple swatch">Purple</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - OCEAN BLUE.svg" alt="Ocean Blue swatch">Ocean Blue</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - LIGHT BLUE.svg" alt="Light Blue swatch">Light Blue</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - ROYAL BLUE.svg" alt="Royal Blue swatch">Royal Blue</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - ORANGE.svg" alt="Orange swatch">Orange</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - DARK YELLOW.svg" alt="Dark Yellow swatch">Dark Yellow</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - SKIN.svg" alt="Skin swatch">Skin</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - DARK BROWN.svg" alt="Dark Brown swatch">Dark Brown</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - BLACK.svg" alt="Black swatch">Black</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - PASTEL GREEN.svg" alt="Pastel Green swatch">Pastel Green</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - TINT GREEN.svg" alt="Tint Green swatch">Tint Green</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - LIGHT GREEN.svg" alt="Light Green swatch">Light Green</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - DARK GREEN.svg" alt="Dark Green swatch">Dark Green</div>
+            <div class="rail-card"><img class="rail-swatch" src="assets/images/Color - WHITE.svg" alt="White swatch">White</div>
         </div>
     </section>
 
