--- a/products.html
+++ b/products.html
@@ -116,89 +116,89 @@
                 <div class="color-grid">
                     <!-- Row 1 -->
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #FFC0CB;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - LIGHT PINK.svg" alt="Light Pink">
                         <span class="color-name">Light Pink</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #FF6F9C;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - DARK PINK.svg" alt="Dark Pink">
                         <span class="color-name">Dark Pink</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #FF1E8A;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - MAGENTA.svg" alt="Magenta">
                         <span class="color-name">Magenta</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #FF4B4B;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - RED.svg" alt="Red">
                         <span class="color-name">Red</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #800020;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - MARRON.svg" alt="Marron">
                         <span class="color-name">Marron</span>
                     </div>
 
                     <!-- Row 2 -->
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #E6CCFF;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - LIGHT PURPLE.svg" alt="Light Purple">
                         <span class="color-name">Light Purple</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #A64DFF;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - PURPLE.svg" alt="Purple">
                         <span class="color-name">Purple</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #7EC8E3;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - OCEAN BLUE.svg" alt="Ocean Blue">
                         <span class="color-name">Ocean Blue</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #ADD8E6;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - LIGHT BLUE.svg" alt="Light Blue">
                         <span class="color-name">Light Blue</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #4169E1;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - ROYAL BLUE.svg" alt="Royal Blue">
                         <span class="color-name">Royal Blue</span>
                     </div>
 
                     <!-- Row 3 -->
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #FFA500;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - ORANGE.svg" alt="Orange">
                         <span class="color-name">Orange</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #FFD700;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - DARK YELLOW.svg" alt="Dark Yellow">
                         <span class="color-name">Dark Yellow</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #FAD6A5;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - SKIN.svg" alt="Skin">
                         <span class="color-name">Skin</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #8B4513;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - DARK BROWN.svg" alt="Dark Brown">
                         <span class="color-name">Dark Brown</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #000000;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - BLACK.svg" alt="Black">
                         <span class="color-name">Black</span>
                     </div>
 
                     <!-- Row 4 -->
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #C8FACC;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - PASTEL GREEN.svg" alt="Pastel Green">
                         <span class="color-name">Pastel Green</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #DFFFE2;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - TINT GREEN.svg" alt="Tint Green">
                         <span class="color-name">Tint Green</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #90EE90;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - LIGHT GREEN.svg" alt="Light Green">
                         <span class="color-name">Light Green</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #006400;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - DARK GREEN.svg" alt="Dark Green">
                         <span class="color-name">Dark Green</span>
                     </div>
                     <div class="color-item animate-on-scroll">
-                        <span class="color-swatch" style="background: #FFFFFF; border: 1px solid #ddd;"></span>
+                        <img class="color-swatch-img" src="assets/images/Color - WHITE.svg" alt="White">
                         <span class="color-name">White</span>
                     </div>
                 </div>
