--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="logo">
-                <span class="logo-mark">IC</span>
-                <span class="logo-text">IZSY Chenille</span>
+                <img class="logo-mark" src="assets/images/IZSY emblem2.png" alt="IZSY emblem">
+                <span class="logo-text">Our Loves, Our Efforts.</span>
             </div>
             <nav class="main-nav">
                 <ul>
