--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="logo">
-                <span class="logo-mark">IC</span>
-                <span class="logo-text">IZSY Chenille</span>
+                <img class="logo-mark" src="assets/images/IZSY emblem2.png" alt="IZSY emblem">
+                <span class="logo-text">Our Loves, Our Efforts.</span>
             </div>
             <nav class="main-nav">
                 <ul>
@@ -47,29 +47,8 @@
 
         <section class="section">
             <div class="container contact-layout">
-                <div class="contact-form-wrapper animate-on-scroll">
-                    <h2>Send Us a Message</h2>
-                    <!-- This is a front-end form only. Connect to backend or form service later. -->
-                    <form class="contact-form">
-                        <div class="form-group">
-                            <label for="name">Name*</label>
-                            <input type="text" id="name" name="name" required placeholder="Your full name">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email*</label>
-                            <input type="email" id="email" name="email" required placeholder="you@example.com">
-                        </div>
-                        <div class="form-group">
-                            <label for="whatsapp">WhatsApp Number*</label>
-                            <input type="tel" id="whatsapp" name="whatsapp" required placeholder="+60...">
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message / Order Details*</label>
-                            <textarea id="message" name="message" rows="5" required placeholder="Tell us what you would like to order or customise..."></textarea>
-                        </div>
-                        <button type="submit" class="btn primary-btn">Submit</button>
-                        <p class="form-note">*This is a demo form. Please also contact us directly via WhatsApp or Instagram.</p>
-                    </form>
+                <div class="contact-form-wrapper animate-on-scroll logo-panel">
+                    <img src="assets/images/IZSY logo.png" alt="IZSY logo">
                 </div>
 
                 <div class="contact-info animate-on-scroll">
@@ -79,8 +58,8 @@
                     </p>
                     <ul class="contact-list">
                         <li><strong>WhatsApp:</strong> <a href="https://wa.me/60139083945/?text=Order Chenille" target="_blank" rel="noopener">+60 13-908 3945</a></li>
-                        <li><strong>Instagram:</strong> <a href="https://www.instagram.com" target="_blank" rel="noopener">@IZSY Chenille</a></li>
-                        <li><strong>TikTok:</strong> <a href="https://www.tiktok.com" target="_blank" rel="noopener">@IZSY Chenille</a></li>
+                        <li><strong>Instagram:</strong> <a href="https://www.instagram.com" target="_blank" rel="noopener">-</a></li>
+                        <li><strong>TikTok:</strong> <a href="https://www.tiktok.com" target="_blank" rel="noopener">-</a></li>
                     </ul>
 
                     <h3>Operating Hours</h3>
