--- a/contact.html
+++ b/contact.html
@@ -69,13 +69,15 @@
                     </p>
 
                     <h3>Location</h3>
-                    <p>
-                        Handmade from home studio.<br>
-                        Delivery and meet-up details will be discussed upon order.
-                    </p>
 
-                    <div class="map-placeholder">
-                        Google Maps / Location placeholder
+                    <div class="map-embed">
+                        <iframe
+                            title="Map to Universiti Malaysia Terengganu"
+                            src="https://www.google.com/maps?q=Universiti%20Malaysia%20Terengganu&output=embed"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                     </div>
                 </div>
             </div>
